--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gecko O Meter</title>
+  <title>Gecko-O-Meter</title>
 </head>
 <body>
 <div id="container"></div>
